add part of the new bibliography

--- a/repport.bib
+++ b/repport.bib
@@ -164,3 +164,211 @@
   year = 1996
 }
 
+
+
+@article{berg1998politics,
+  title={The politics of technology: On bringing social theory into technological design},
+  author={Berg, Marc},
+  journal={Science, Technology, \& Human Values},
+  volume={23},
+  number={4},
+  pages={456--490},
+  year={1998},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{bruni2003objects,
+  title={Objects, sociality and materialities of organizing: ethnography of a telemedicine project},
+  author={Bruni, Attila},
+  journal={Unpublished Ph. D. thesis, Dept. of Sociology and Social Research, Trento},
+  year={2003}
+}
+
+@article{graham1993curious,
+  title={The Curious Case of the Vanishing Technology},
+  author={Graham, Button},
+  journal={Technology in Working Order},
+  year={1993}
+}
+
+@article{escobar1994welcome,
+  title={Welcome to Cyberia: Notes on the Anthropology of Cyberculture [and comments and reply]},
+  author={Escobar, Arturo and Hess, David and Licha, Isabel and Sibley, Will and Strathern, Marilyn and Sutz, Judith},
+  journal={Current anthropology},
+  volume={35},
+  number={3},
+  pages={211--231},
+  year={1994},
+  publisher={University of Chicago Press}
+}
+
+@article{harre2002material,
+  title={Material objects in social worlds},
+  author={Harr{\'e}, Rom},
+  journal={Theory, Culture \& Society},
+  volume={19},
+  number={5-6},
+  pages={23--33},
+  year={2002},
+  publisher={Sage Publications London, Thousand Oaks and New Delhi}
+}
+
+@inproceedings{hughes1994moving,
+  title={Moving out from the control room: ethnography in system design},
+  author={Hughes, John and King, Val and Rodden, Tom and Andersen, Hans},
+  booktitle={Proceedings of the 1994 ACM conference on Computer supported cooperative work},
+  pages={429--439},
+  year={1994},
+  organization={ACM}
+}
+
+@article{cetina1997sociality,
+  title={Sociality with objects: Social relations in postsocial knowledge societies},
+  author={Cetina, Karin Knorr},
+  journal={Theory, culture \& society},
+  volume={14},
+  number={4},
+  pages={1--30},
+  year={1997},
+  publisher={Sage Publications}
+}
+
+@article{law2002objects,
+  title={Objects and spaces},
+  author={Law, John},
+  journal={Theory, culture \& society},
+  volume={19},
+  number={5-6},
+  pages={91--105},
+  year={2002},
+  publisher={Sage Publications London, Thousand Oaks and New Delhi}
+}
+
+@book{law2002complexities,
+  title={Complexities: Social studies of knowledge practices},
+  author={Law, John},
+  year={2002},
+  publisher={Duke University Press}
+}
+
+
+@book{mackenzie1999social,
+  title={The social shaping of technology},
+  author={MacKenzie, Donald and Wajcman, Judy},
+  number={2nd},
+  year={1999},
+  publisher={Open university press}
+}
+
+@book{alvesson2017reflexive,
+  title={Reflexive methodology: New vistas for qualitative research},
+  author={Alvesson, Mats and Sk{\"o}ldberg, Kaj},
+  year={2017},
+  publisher={Sage}
+}
+
+@book{barthes2015aventure,
+  title={L'aventure s{\'e}miologique},
+  author={Barthes, Roland},
+  year={2015},
+  publisher={Le Seuil}
+}
+
+@article{jean1968systeme,
+  title={Le syst{\`e}me des objets},
+  author={Jean, Baudrillard},
+  journal={Paris, Gallimard},
+  year={1968}
+}
+
+@article{bioy2007lorsque,
+  title={Lorsque les m{\'e}decins de la douleur font de la psychologie…},
+  author={Bioy, Antoine},
+  journal={Le Journal des psychologues},
+  number={3},
+  pages={35--39},
+  year={2007},
+  publisher={Martin M{\'e}dia}
+}
+
+@inproceedings{bonnefoi2017medecine,
+  title={M{\'e}decine personnalis{\'e}e: jusqu’o{\`u} peut-on aller? Un r{\'e}el enjeu de recherche pour l’industrie pharmaceutique et ses partenaires},
+  author={Bonnefoi, Marc},
+  booktitle={Annales des Mines-R{\'e}alit{\'e}s industrielles},
+  number={1},
+  pages={39--43},
+  year={2017},
+  organization={FFE}
+}
+
+
+@incollection{chapouthier2010chapitre,
+  title={Chapitre 2-La douleur sous l'angle de l'{\'e}volution des esp{\`e}ces},
+  author={Chapouthier, Georges},
+  booktitle={Douleur animale, douleur humaine},
+  pages={43--50},
+  year={2010},
+  publisher={Editions Qu{\ae}}
+}
+
+
+@article{croix2007vraie,
+  title={Vraie ou fausse douleur? Le psychique et l’organique en jeu dans la douleur},
+  author={Croix, L},
+  journal={Le Journal des psychologues (246)},
+  pages={24--9},
+  year={2007}
+}
+
+@book{del2012douleur,
+  title={La douleur du malade},
+  author={Del Volgo, Marie-Jos{\'e}},
+  year={2012},
+  publisher={Er{\`e}s}
+}
+
+
+@article{denizeau2013experience,
+  title={L’exp{\'e}rience de la douleur, une activit{\'e} symbolique?},
+  author={Denizeau, Laurent},
+  journal={Anthropologie \& Sant{\'e}. Revue internationale francophone d'anthropologie de la sant{\'e}},
+  number={7},
+  year={2013},
+  publisher={Association Amades}
+}
+
+
+@article{olivier1995politique,
+  title={La politique du terrain. Sur la production des donn{\'e}es en anthropologie},
+  author={Olivier de Sardan, Jean-Pierre},
+  journal={Enqu{\^e}te. Archives de la revue Enqu{\^e}te},
+  number={1},
+  pages={71--109},
+  year={1995},
+  publisher={EHESS/Parenth{\`e}ses}
+}
+
+@article{fainzang2009communication,
+  title={La communication d’informations dans la relation m{\'e}decins-malades. Une approche anthropologique},
+  author={Fainzang, Sylvie},
+  journal={Questions de communication},
+  number={15},
+  pages={279--295},
+  year={2009},
+  publisher={Presses universitaires de Nancy}
+}
+
+@book{grimaldi2017maladies,
+  title={Les Maladies chroniques: Vers la troisi{\`e}me m{\'e}decine},
+  author={Grimaldi, Andr{\'e} and Caill{\'e}, Yvanie and Pierru, Fr{\'e}d{\'e}ric and Tabuteau, Didier},
+  year={2017},
+  publisher={Odile Jacob}
+}
+
+
+@book{hine2000virtual,
+  title={Virtual ethnography},
+  author={Hine, Christine},
+  year={2000},
+  publisher={Sage Publications Ltd}
+}
